Bug 116268 - [Writer UI] Set page variable dialog (Insert-Fileds) is sorted alphabetically
Summary: [Writer UI] Set page variable dialog (Insert-Fileds) is sorted alphabetically
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.2.1 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.1 target:6.0.6
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-07 14:36 UTC by Alexander Polkhovskiy
Modified: 2018-08-08 13:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
UI defect demonstration (32.89 KB, image/png)
2018-03-07 14:37 UTC, Alexander Polkhovskiy
Details
in català (34.28 KB, image/png)
2018-05-31 11:18 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Polkhovskiy 2018-03-07 14:36:12 UTC
Description:
Maybe it happens because "off"<"on" -> "вкл."<"выкл." in string comparison.

Steps to Reproduce:
1. Open Insert-Fileds dialog, goto Variables tab, choose Set page variable.
2. Then the options on/off work opposite its meaning: "on" ("вкл.") disables the Offset field, "off" ("выкл.") - enables it.
3. In English UI it works fine.

Actual Results:  
I have to choose "выкл." to make it work like "on".

Expected Results:
on = вкл.
off = выкл.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Alexander Polkhovskiy 2018-03-07 14:37:12 UTC
Created attachment 140433 [details]
UI defect demonstration
Comment 2 Buovjaga 2018-03-10 18:30:16 UTC
kompi, can you check it?
Comment 3 Roman Kuznetsov 2018-03-10 18:46:36 UTC
i do not sure that field Offset and on/off are linked
Before check translate I need to understand how it works...
But I added Serg into CC
Comment 4 Xisco Faulí 2018-04-10 16:55:57 UTC
(In reply to kompilainenn from comment #3)
> i do not sure that field Offset and on/off are linked
> Before check translate I need to understand how it works...
> But I added Serg into CC

hi kompilainenn,
Any update here?
Comment 5 Serg Bormant 2018-04-11 07:13:14 UTC
This is not translation (or translation only) bug.
There are no "off" -> "вкл." and "on" -> "выкл." translations at all:
https://translations.documentfoundation.org/ru/libo60_ui/translate/#search=выкл.&sfields=target
Comment 6 Xisco Faulí 2018-05-31 11:17:54 UTC
Same behaviour seen with Català, where 'activat' meens on. Clearly this is sorted alphabetically....
Comment 7 Xisco Faulí 2018-05-31 11:18:21 UTC
Created attachment 142438 [details]
in català
Comment 8 Xisco Faulí 2018-05-31 11:34:29 UTC
The problem is here: https://opengrok.libreoffice.org/xref/core/sw/source/ui/fldui/fldvar.cxx#534, If the list is sorted alphabetically, the 1 position can be 'on' depending on the language...
Comment 9 Xisco Faulí 2018-05-31 11:44:37 UTC
Caolán, I thought you might be interested in this one...
Comment 10 Caolán McNamara 2018-05-31 13:20:59 UTC
I can fix that
Comment 11 Commit Notification 2018-05-31 20:05:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b83ec344f914ec6571d6d53b1ea7d0924db7a6a4

Resolves: tdf#116268 use on/off data, not pos to determine which is which

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2018-06-01 04:33:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32581ff2f5f99883802253d809c9f760b855c934&h=libreoffice-6-1

Resolves: tdf#116268 use on/off data, not pos to determine which is which

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2018-06-01 04:33:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a828a0fe795fb44e1daa0ece9c994973b3975fce&h=libreoffice-6-0

Resolves: tdf#116268 use on/off data, not pos to determine which is which

It will be available in 6.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Alexander Polkhovskiy 2018-08-08 12:05:31 UTC
Not reproduced in LO 6.0.6.2. Thank you!
Comment 15 Xisco Faulí 2018-08-08 13:35:59 UTC
(In reply to Alexander Polkhovskiy from comment #14)
> Not reproduced in LO 6.0.6.2. Thank you!

Setting as VERIFIED. Thanks for retesting!!