Resolves: tdf#116268 use on/off data, not pos to determine which is which

Change-Id: I73127bc6ea78daaf1e79596067c1cdeb692e1566
Reviewed-on: https://gerrit.libreoffice.org/55134
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>